FLUID-4957: Increased width of hide-show tab which may fix layout issue in the demo.

--- a/src/webapp/demos/uiOptions/css/uiOptions.css
+++ b/src/webapp/demos/uiOptions/css/uiOptions.css
@@ -154,7 +154,7 @@ img {
 }
 
 .fl-uiOptions-fatPanel .fl-toggleButton {
-	width: 16em;
+	width: 17em;
 }
 
 .uio-demo-theme .fl-uiOptions-fatPanel .fl-toggleButton,
